<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/menu_title" >
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_mascotas"
                    android:icon="@drawable/baseline_pets_24"
                    android:title="@string/menu_mascota" />
                <item
                    android:id="@+id/nav_miembros"
                    android:icon="@drawable/baseline_person_add_alt_1_24"
                    android:title="@string/menu_miembro" />
                <item
                    android:id="@+id/nav_marketplace"
                    android:icon="@drawable/baseline_shopping_basket_24"
                    android:title="@string/menu_marketplace" />

                <item
                    android:id="@+id/nav_contacto"
                    android:icon="@drawable/baseline_perm_contact_calendar_24"
                    android:title="@string/menu_contacto" />
            </menu>
        </item>

        <item
            android:title="@string/menu_herramientas" >
            <menu>
                <item
                    android:id="@+id/nav_cartera"
                    android:icon="@drawable/baseline_wallet_24"
                    android:title="@string/menu_cartera" />
                <item
                    android:id="@+id/nav_configuracion"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/menu_configuracion" />

                <item
                    android:id="@+id/nav_masinfo"
                    android:icon="@drawable/baseline_auto_awesome_24"
                    android:title="@string/menu_masinfo" />
            </menu>
        </item>
    </group>
</menu>