<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.configuracion.ConfiguracionFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCambio"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/semi_transparent"
        android:backgroundTint="@color/semi_transparent"
        android:gravity="center"
        android:text="El texto principal se verá así. \n 1234567890!@#%&amp;*()_+-="
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtTamano"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:paddingLeft="5dp"
        android:text="@string/tam_fuente"
        android:textColor="@color/white" />

    <SeekBar
        android:id="@+id/sbarTamano"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:max="10"
        android:progress="0" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/fuente_contraste"
        android:textColor="@color/white" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:text="@string/teclado_contraste"
        android:textColor="@color/white" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:text="@string/resaltar_btn"
        android:textColor="@color/white" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:text="@string/inv_colores"
        android:textColor="@color/white" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:text="@string/extraatenuado"
        android:textColor="@color/white" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:text="@string/reducir_tyd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnAplicar"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/gris"
        android:text="@string/aplicar"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>