<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.contacto.ContactoFragment">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ettNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/corner_radius"
            android:backgroundTint="@color/semi_transparent"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/ettApellido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/corner_radius"
            android:backgroundTint="@color/semi_transparent"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNombreC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/txtApellidoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/apellido" />
    </LinearLayout>

    <EditText
        android:id="@+id/ettEmailC"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/semi_transparent"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtEmailC"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:text="@string/correo" />

    <EditText
        android:id="@+id/ettMensaje"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/semi_transparent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:text="@string/mensaje" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/btnMensaje"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/gris"
            android:text="@string/enviar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLlamar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/gris"
            android:text="@string/llamar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="right"
            android:layout_marginRight="-40dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/perrolado" />
    </FrameLayout>

</LinearLayout>