<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edtxtUserR"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:background="@drawable/corner_radius"
            android:backgroundTint="@color/semi_transparent"
            android:ems="10"
            android:hint="@string/hint_user"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/edtxtEmailR"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_radius"
            android:backgroundTint="@color/semi_transparent"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/edtxtPwdR"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_radius"
            android:backgroundTint="@color/semi_transparent"
            android:ems="10"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/edtxtPwd2R"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_radius"
            android:backgroundTint="@color/semi_transparent"
            android:ems="10"
            android:hint="@string/hint_conf_pwd"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/mentita"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtOtros"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/opciones_registro"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgGoogle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="abrirWeb"
                android:padding="10dp"
                android:src="@drawable/google"
                android:tag="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Faccounts.google.com%2F&amp;followup=https%3A%2F%2Faccounts.google.com%2F&amp;ifkv=ASKXGp3sdVEsGJZwd841StFnkhbZCfCCofoAmEm1pn9hAAwInEtv8uXB5ePtpPKoF9qiw8CpagpmBw&amp;passive=1209600&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin&amp;dsh=S1795210272%3A1707321849744519&amp;theme=glif" />

            <ImageView
                android:id="@+id/imgGithub"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="abrirWeb"
                android:padding="10dp"
                android:src="@drawable/github_logo"
                android:tag="https://github.com/login"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="abrirWeb"
                android:padding="10dp"
                android:src="@drawable/facebook"
                android:tag="https://es-es.facebook.com/login.php/" />

            <ImageView
                android:id="@+id/imgTwitter"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="abrirWeb"
                android:padding="10dp"
                android:src="@drawable/twitter"
                android:tag="https://twitter.com/i/flow/login"
                app:tint="@color/white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>